# nanobot-rs

./: .gitignore  .taplo.toml  AGENT.md  ANALYSIS_CN.md  CHANGELOG.md  CIRCULAR_DEPENDENCY_REFACTORING.md  CIRCULAR_DEPENDENCY_SOLUTION_SUMMARY.md  CLAUDE.md  CODE_DESIGN_REVIEW.md  CONTRIBUTING.md  CUSTOM_PROMPTS_IMPLEMENTATION.md  Cargo.toml  ERROR_TYPE_MIGRATION.md  FALLBACK_IMPLEMENTATION.md  IMPROVEMENTS_LOG.md  LICENSE  PHASE1_SUMMARY.md  README.md  README_EN.md  REFACTORING_LOG.md  RUST_MVP_DESIGN.md  SESSION_SUMMARY.md  SUMMARY.md  TEMPLATE_ENGINE_UNIFICATION_COMPLETE.md  config.local.json  justfile
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
crates/nanobot/: Cargo.toml
crates/nanobot-agent/: Cargo.toml
crates/nanobot-bus/: Cargo.toml
crates/nanobot-bus/src/: error.rs  lib.rs  queue.rs
crates/nanobot-channels/: Cargo.toml
crates/nanobot-channels/src/: base.rs  cli.rs  error.rs  feishu.rs  lib.rs  manager.rs  placeholder.rs  telegram.rs
crates/nanobot-channels/src/feishu/: card.rs  mod.rs  types.rs  util.rs
crates/nanobot-channels/src/telegram/: mod.rs
crates/nanobot-config/: Cargo.toml
crates/nanobot-config/src/: acp.rs  error.rs  lib.rs  loader.rs  schema.rs
crates/nanobot-cron/: Cargo.toml
crates/nanobot-cron/src/: add_job_params.rs  error.rs  lib.rs  service.rs
crates/nanobot-prompt/: Cargo.toml
crates/nanobot-prompt/src/: error.rs  lib.rs  provider.rs  template.rs  types.rs
crates/nanobot-provider/: Cargo.toml
crates/nanobot-provider/src/: anthropic.rs  anthropic_types.rs  base.rs  error.rs  fallback.rs  lib.rs  openai_compat.rs  openai_types.rs  proxy.rs  registry.rs  tool_name.rs  traits.rs
crates/nanobot-provider/src/streaming/: accumulator.rs  adapter.rs  events.rs  mod.rs  openai_adapter.rs  sse_adapter.rs
crates/nanobot-session/: Cargo.toml
crates/nanobot-session/src/: consolidation_strategy.rs  error.rs  helpers.rs  lib.rs  memory_provider.rs  memory_store.rs  session_hook.rs  session_manager.rs  session_store.rs  traits.rs  transformer.rs  types.rs
crates/nanobot-tools/: Cargo.toml
crates/nanobot-tools/src/: base.rs  builtin.rs  config.rs  cron.rs  error.rs  filesystem.rs  lib.rs  mcp.rs  message.rs  registry.rs  registry_builder.rs  search.rs  shell.rs  spawn.rs  web.rs
crates/nanobot-types/: Cargo.toml
crates/nanobot-types/src/: agent.rs  builtin.rs  bus.rs  cron.rs  heartbeat.rs  lib.rs  provider.rs  task.rs  text.rs  tool_name.rs  tools.rs
docs/: ACP_AGENTS_INTEGRATION_COMPLETE.md  ACP_ARCHITECTURE_POSITION.md  ACP_FINAL_SUMMARY.md  ACP_INTEGRATION_DESIGN.md  ACP_INTEGRATION_SIMPLE.md  ACP_OFFICIAL_RUST_SDK.md  ACP_PHASE2_IMPROVEMENTS.md  ACP_PHASE3_IMPLEMENTATION.md  ACP_RUST_ECOSYSTEM.md  AGENT_ARCHITECTURE_ANALYSIS.md  AGENT_IMPLEMENTATION_GUIDE.md  AGENT_MULTI_MODE_DESIGN.md  ARCHITECTURE.md  CHANGELOG_SESSION.md  CLI_REFERENCE.md  CODE_SEARCH_DESIGN.md  CODE_SEARCH_PHASE1_PLAN.md  CONFIGURATION.md  DEVELOPMENT.md  E2E_TESTING.md  FALLBACK_PROVIDER.md  MEMORY_SYSTEM_DESIGN.md  OPENVIKING_INTEGRATION.md  PAIN_POINTS.md  PERFORMANCE_OPTIMIZATION.md  QUICK_START.md  README.md  RETRIEVAL_CONTEXT.md  SEARCH_TOOLS_IMPLEMENTATION.md  SEARCH_TOOLS_SUMMARY_IMPLEMENTATION.md  SEARCH_TOOLS_TEST_COVERAGE.md  STREAMING_UNIFIED_DESIGN.md  UNIVERSAL_AGENT_DESIGN.md  channel-compatibility-roadmap.md  test-coverage-improvement-2026-03-06.md
docs/examples/: fallback_config.md
docs/plans/: CLAUDE_CODE_ALIGNMENT_ROADMAP.md  CLI_WORKFLOW_UPGRADE.md  MEMORY_AND_SUBAGENT_UPGRADE.md  PRODUCTIZATION_OBSERVABILITY_RELEASE.md  README.md  RFC-0001-claude-code-alignment-roadmap.md  RFC-0002-cli-workflow-upgrade.md  RFC-0003-tool-orchestration-and-safety.md  RFC-0004-memory-and-subagent-upgrade.md  RFC-0005-productization-observability-release.md  TOOL_ORCHESTRATION_AND_SAFETY_UPGRADE.md
examples/: demo-flow.json
scripts/: generate-changelog.sh  quality-gate.sh  setup-git-hooks.sh  verify-tag-changelog.sh
src/: error.rs  lib.rs  main.rs  task_id.rs
src/acp/: client.rs  config.rs  mod.rs  simple_client.rs
src/agent/: builder.rs  builder.rs.bak4  builder.rs.bak5  builder.rs.bak7  builder.rs.bak8  context.rs  error.rs  file_watcher.rs  loop_core.rs  memory.rs  mod.rs  skills.rs  spawn_service.rs  subagent.rs  traits.rs
src/bus/: error.rs  events.rs  mod.rs  queue.rs
src/channels/: base.rs  cli.rs  error.rs  manager.rs  mod.rs  placeholder.rs  telegram.rs
src/cli/: mod.rs
src/config/: error.rs  loader.rs  mod.rs  schema.rs
src/cron/: add_job_params.rs  error.rs  mod.rs  service.rs
src/heartbeat/: error.rs  mod.rs  service.rs
src/observability/: mod.rs
src/prompt/: error.rs  provider.rs  template.rs  types.rs
src/provider/: anthropic.rs  base.rs  copilot_acp.rs  error.rs  fallback.rs  mod.rs  openai_compat.rs  proxy.rs  registry.rs  tool_name.rs  traits.rs
src/runtime/: app.rs  error.rs  mod.rs
src/session/: consolidation.rs  consolidation_strategy.rs  error.rs  hook.rs  manager.rs  memory_provider.rs  memory_store.rs  mod.rs  session_hook.rs  session_manager.rs  session_store.rs  traits.rs  transformer.rs  types.rs
src/tools/: acp.rs  base.rs  builtin.rs  config.rs  cron.rs  error.rs  filesystem.rs  mcp.rs  message.rs  mod.rs  registry.rs  registry_builder.rs  search.rs  shell.rs  (+3 more)
tests/: e2e_local.rs  search_integration.rs
(+67 files in other folders)
