[package]
name = "nanobot-bus"
version.workspace = true
edition.workspace = true
license.workspace = true

[dev-dependencies]
chrono = { workspace = true }

[dependencies]
nanobot-types.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
