[package]
name = "nanobot-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[dependencies]
nanobot-types.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
dirs.workspace = true
regex.workspace = true
uuid.workspace = true
agent-client-protocol.workspace = true
