[package]
name = "nanobot-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dev-dependencies]
tempfile.workspace = true
uuid = { workspace = true, features = ["v4"] }
which.workspace = true

[dependencies]
nanobot-types.workspace = true
nanobot-config.workspace = true
nanobot-cron.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["sync", "time", "fs", "process", "rt"] }
reqwest.workspace = true
http.workspace = true
url.workspace = true
rmcp.workspace = true
walkdir.workspace = true
regex.workspace = true
html2text.workspace = true
chrono = { workspace = true, features = ["serde"] }
chrono-tz.workspace = true
dirs.workspace = true
bon.workspace = true
